Use an ArrayDeque for the FIFO queue of invalid components.